--- a/main.html
+++ b/main.html
@@ -123,7 +123,7 @@
 <footer id="footer_container"> <p>&copy; SpicyTech, 2024.</p> </footer>
 
 <!------------------------------------------------------------------------>
-<script type="module" src="Frontend2/main.js"></script>
+<script type="module" src="main.js"></script>
 <!--script src="dist/bundle.js" type="module"></script-->
 <!------------------------------------------------------------------------>
 
